<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>compliant_controllers_demos</name>
  <version>0.0.1</version>
  <description>Robot-specific launch and configuration demos for compliant_controllers.</description>
  <maintainer email="smihael@gmail.com">Mihael Simonic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>compliant_controllers</exec_depend>
  <exec_depend>compliant_controllers_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>franka_bringup</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_gazebo_bringup</exec_depend>
  <exec_depend>franka_robot_state_broadcaster</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lbr_bringup</exec_depend>
  <exec_depend>lbr_description</exec_depend>
  <exec_depend>net_ft_description</exec_depend>
  <exec_depend>onrobot_ft_ros2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotiq_controllers</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>robotiq_driver</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>spacemouse_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
